src/main/metadata/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_CommChannel__c</fullName>
        <label>Activity CommChannel</label>
        <picklist>
            <picklistValues>
                <fullName>0=inbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=outbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=direct mail/post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5=sms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6=web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7=social media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8=SSI Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9=CSI Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Comment__c</fullName>
        <inlineHelpText>Activity Comment</inlineHelpText>
        <label>Activity Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_DataSource__c</fullName>
        <label>Activity DataSource</label>
        <picklist>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd party data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_DataSubSource__c</fullName>
        <label>Activity DataSubSource</label>
        <picklist>
            <controllingField>Activity_DataSource__c</controllingField>
            <picklistValues>
                <fullName>Air China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jingdong mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taobao station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperation media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China telecom / 189 mailbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunhill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUGO BOSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axciom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz interactive community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sina Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMART official website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bitauto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pcauto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baidu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoHu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz website _ pre-sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz _ contact us _ test drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz _ contact us _ star gruppo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_InboundCallNumber__c</fullName>
        <inlineHelpText>Activity InboundCallNumber</inlineHelpText>
        <label>Activity InboundCallNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Activity_InboundExtNumber__c</fullName>
        <label>Activity InboundExtNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Activity_Info__c</fullName>
        <inlineHelpText>Activity Info</inlineHelpText>
        <label>Activity Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_LeadsData__c</fullName>
        <label>Activity LeadsData</label>
        <picklist>
            <picklistValues>
                <fullName>Online Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_OutboundCallSource__c</fullName>
        <label>Activity OutboundCallSource</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper/Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Exhibition Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_OutboundSubCallSource__c</fullName>
        <description>Dependent field of Activity OutboundCallSource</description>
        <label>Activity OutboundCallSubSource</label>
        <picklist>
            <controllingField>Activity_OutboundCallSource__c</controllingField>
            <picklistValues>
                <fullName>Air China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party (Partner) Mail_Minsheng Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party (Partner) Mail _Bank of Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB official website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sina Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart official website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese radio network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Web, Community, Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Telecom/189 email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz E-newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz E-brochure and price list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer telephone contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products range cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure &amp; Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer message contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Purpose__c</fullName>
        <inlineHelpText>Activity Purpose</inlineHelpText>
        <label>Activity Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>0=welcome call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=data cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=feedback for service request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=DM return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5=SMS survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6=Outbound survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Resolution__c</fullName>
        <label>Activity Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Send Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSR Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQ &amp; CSR Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQ Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSR Answer &amp; Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <label>Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>need call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wrong number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no such person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>invalid data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>failed to send SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>failed to send Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>failed to send fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>invalid call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>call transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail-Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail-Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail-Blacklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adhoc_eDM_Template_ID__c</fullName>
        <formula>If(Car_Series__c !=null, CASE(eDM_Type__c, &quot;Brochure&quot;, &quot;1096&quot;, &quot;Price List&quot;, &quot;1097&quot;, &quot;Brochure+Price List&quot;, &quot;1098&quot;, &quot;&quot;), &quot;&quot;)</formula>
        <label>Adhoc eDM Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <description>This field is created for display assignment status automatically.</description>
        <formula>IF(Owner:User.Profile.Name=&quot;CAC OB SV&quot;, &quot;Unassigned&quot;, IF(ISPICKVAL( Status , &quot;Closed&quot;), &quot;Finished&quot;,IF(ISPICKVAL( Status , &quot;Open&quot;), &quot;Executing&quot;,&quot;&quot;)))</formula>
        <label>Assignment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlacklistSensitiveWord__c</fullName>
        <label>Blacklist Sensitive Word</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CAC_SourceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External id field for migration purpose</description>
        <externalId>true</externalId>
        <label>CAC SourceId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Called__c</fullName>
        <description>The Called field contains the called part of the call (also known as “DNIS”).</description>
        <label>Called</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <description>The Caller field contains the calling party of the call
(also known as “ANI”).</description>
        <label>Caller</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_ID__c</fullName>
        <description>Campaign Member ID From Campaign</description>
        <label>Campaign Member ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_eDM_Template_ID__c</fullName>
        <label>Campaign eDM Template ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_eDM_Template_Subject__c</fullName>
        <label>Campaign eDM Template Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Series__c</fullName>
        <description>Template.Car Series - &gt; Car Series</description>
        <label>Car Series</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <description>SSI</description>
        <label>CustomerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUP_Number__c</fullName>
        <description>Contact portfolio</description>
        <label>DUP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_call_time__c</fullName>
        <description>SSI</description>
        <label>End call time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Executed_CSR__c</fullName>
        <label>Executed CSR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_URL__c</fullName>
        <label>Flow URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generate_QC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate QC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomeMobilePhone__c</fullName>
        <description>SSI</description>
        <label>HomeMobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IB_Call_Type__c</fullName>
        <label>IB Call Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Status__c</fullName>
        <label>IB Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InteractionIds__c</fullName>
        <label>InteractionIds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_OB_Call__c</fullName>
        <label>Last OB Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>More_Than_2_OB_Times__c</fullName>
        <formula>IF( OB_Call_Times__c &gt;=3, IMAGE( &quot;/img/samples/flag_red.gif&quot;,&quot;&quot;), &quot;&quot;)</formula>
        <label>More Than 2 OB Times</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OB_Call_Times__c</fullName>
        <label>OB Call Times</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OB_Status__c</fullName>
        <label>OB Status</label>
        <picklist>
            <controllingField>Result__c</controllingField>
            <picklistValues>
                <fullName>no answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wrong number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no such person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>invalid data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OfficePhone__c</fullName>
        <description>SSI</description>
        <label>OfficePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonAssistantPhone__c</fullName>
        <description>DMS</description>
        <label>Asst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonHomePhone__c</fullName>
        <description>DMS</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonMobilePhone__c</fullName>
        <description>DMS</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonOtherPhone__c</fullName>
        <description>DMS</description>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>DMS</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QC_ID__c</fullName>
        <externalId>true</externalId>
        <label>QC ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Link__c</fullName>
        <formula>IF(OR( ISBLANK( QC_ID__c ),  ISNULL(QC_ID__c)), &apos;&apos;, HYPERLINK(&quot;/&quot;+ QC_ID__c , &quot;View QC&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Quantity__c</fullName>
        <label>QC Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Called_Type__c</fullName>
        <formula>IF(Called__c == &apos;4008108880&apos;, 
&apos;BBAC&apos;,
IF (Called__c == &apos;4008181188&apos;,
&apos;BMBS&apos;,
IF (Called__c == &apos;4008110000&apos;,
&apos;Smart&apos;,&apos;&apos;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Called Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Check_Activity_Status__c</fullName>
        <formula>if( ISPICKVAL( Status__c ,&apos;Valid&apos;),&apos;否&apos;,&apos;是&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Activity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Check_IB_enquiries__c</fullName>
        <formula>IF(AND(Id &lt;&gt;&apos;&apos;, Task_RecordType_Name__c==&apos;IB Call&apos;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check IB enquiries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Check_Status__c</fullName>
        <formula>IF(ISPICKVAL(Status,&apos;&apos;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Check_activity_date__c</fullName>
        <formula>IF(ISBLANK(CreatedDate)==true,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check activity date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Completed_task_number__c</fullName>
        <formula>IF(ISPICKVAL(Status,&apos;Closed&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed task number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Has_Activity__c</fullName>
        <formula>IF(AND(Id &lt;&gt;&apos;&apos;, Task_RecordType_Name__c==&apos;OB Call&apos;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_IsAssigned__c</fullName>
        <description>to calculate unassigned tasks, if a task is assigned to &apos;CAC OB SV&apos; it is unassigned task.</description>
        <formula>if(Owner:User.User_Role__c == &apos;CAC OB SV&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAssigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_IsCallSuccess__c</fullName>
        <formula>if( ISPICKVAL(Activity_Status__c,&apos;Successful&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCallSuccess</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_MB_Hotline__c</fullName>
        <formula>IF(Called__c == &apos;4008181188&apos;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MB Hotline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_OB_task_initial_number_new__c</fullName>
        <formula>if(ISPICKVAL(Status,&apos;Open&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OB task initial number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_OB_task_today_number__c</fullName>
        <formula>IF(Activity_Date__c==TODAY(),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OB task today number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Outbound_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Status,&apos;Closed&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outbound Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Resolved_Case_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Result__c,&apos;&apos;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Case Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Result__c</fullName>
        <formula>IF( ISPICKVAL( Result__c , &apos;Resolved&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Smart_Hotline__c</fullName>
        <formula>IF(Called__c == &apos;4008110000&apos;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Smart Hotline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>